# FedStaleAsync

./: .gitignore  README.md  pyproject.toml  run.py
config/: config.yaml
config/data_partitioning/: dirichlet.yaml  group_labels_inner_dirichlet.yaml  two_tier_dirichlet.yaml
config/device_specifications/: client_groups_exponential.yaml  homogeneous_exponential.yaml
config/hydra/launcher/: local.yaml  slurm-cpu.yaml  slurm-gpu.yaml
config/participation_prob_estimation/estimation_method/: client_group_based.yaml  client_group_lookup.yaml  fedau_based.yaml  maximum.yaml  scalar.yaml  uniform.yaml
config/participation_prob_estimation/smooth_method/: none.yaml  smoothed_vs_original_group_prob_ratio.yaml  smoothed_vs_original_prob_ratio.yaml
config/strategy/: fedstale.yaml  unbiased_ca2fl.yaml  unbiased_fedavg.yaml
config/task/: cifar100_resnet18.yaml  cifar10_cnn.yaml  cifar10_resnet18.yaml  cifar10_resnet8.yaml  fashionmnist_cnn.yaml  tinyimagenet_resnet18.yaml
config/trainer/device/: cpu.yaml  cuda.yaml  mps.yaml
config/trainer/local_optimizer/: adam.yaml  sgd.yaml
src/asyncflower/: client.py  run_simulation.py
src/asyncflower/builders/: client_app_builder.py  metrics_enrichment_builder.py  server_app_builder.py
src/asyncflower/data/: preprocessing.py
src/asyncflower/model/: cifar10.py  cifar100.py  fmnist.py  model.py  resnet.py  tinyimagenet.py
src/asyncflower/partitioner/: group_labels_inner_dirichlet.py  two_tier_dirichlet.py
src/asyncflower/simulation/: async_server.py  device.py
src/asyncflower/strategy/: __init__.py  ace.py  ca2fl.py  (+5 more)
(+22 files in other folders)
